@@ -6,7 +6,9 @@ NAME
     cmake-fedora-koji - cmake-fedora helper script to get koji build information
 
 SYNOPSIS
-    cmake-fedora-koji [sub-command [scope1 [scope2] ....]]
+    cmake-fedora-koji <ver|branch|git-branch|bodhi-branch> [scope1 [scope2] ....]]
+    cmake-fedora-koji newest-build [package]
+    cmake-fedora-koji clean
 
 DESCRIPTION
     Following sub-command are recognized:
@@ -25,7 +27,13 @@ DESCRIPTION
         target
             Return koji target names, such as "f21-candidate f20-candidate"
 	
-        clean
+	newest-build
+	    Return the newest build in n-v-r.t format.
+	    Note that koji latest-build only returns the updates pushed
+	    to stable, newest-build, however, returns the updates in
+	    testing as well.
+
+	clean
             For cleaning cache.
 
     scopes: releases of what to build. Multiple values are allowed.
@@ -55,31 +63,22 @@ DESCRIPTION
 END
 }
 
-
-function local_cache_file_update(){
-    $KOJI_CMD list-targets --quiet | tee "$LOCAL_CACHE_FILE"
+function get_koji_list_targets(){
+    cache_output_and_update "${LOCAL_CACHE_FILE}" ${LOCAL_CACHE_EXPIRY:=2592000} $KOJI_CMD list-targets --quiet
 }
 
-function get_koji_list_targets(){
-    if [ "$LOCAL_CACHE" = "1" ];then
-	if [ ! -e $LOCAL_CACHE_DIR ];then
-	    mkdir -p $LOCAL_CACHE_DIR
-	fi
-	if [ ! -e "$LOCAL_CACHE_FILE" ]; then
-	    local_cache_file_update
-	else 
-	    FILE_TIME=`stat --format '%Y' "$LOCAL_CACHE_FILE"`
-	    CURRENT_TIME=`date '+%s'`
-	    LOCAL_CACHE_EXPIRY=${LOCAL_CACHE_EXPIRY:=2592000}
-	    if expr "$FILE_TIME" "+" "$LOCAL_CACHE_EXPIRY" "<" "$CURRENT_TIME"; then
-		local_cache_file_update
-	    else
-		cat "$LOCAL_CACHE_FILE"
-	    fi
-	fi
-    else
-	$KOJI_CMD list-targets --quiet
-    fi
+function local_pkg_history_cache_file_name(){
+    echo "${LOCAL_CACHE_DIR:=$HOME/.cache/cmake-fedora/}$1"
+}
+
+function local_pkg_history_command(){
+    $KOJI_CMD list-history --active --event --package $1 | grep "tagged into"
+}
+
+function get_koji_pkg_history(){
+    _pkg=$1
+    LOCAL_PKG_HISTORY_CACHE_FILE=`local_pkg_history_cache_file_name  ${_pkg}`
+    cache_output_and_update "${LOCAL_PKG_HISTORY_CACHE_FILE}" ${LOCAL_KOJI_HISTORY_CACHE_EXPIRY:=43200} local_pkg_history_command "${_pkg}"
 }
 
 function get_RAWHIDE_BRANCH(){
@@ -107,28 +106,38 @@ for p in $CMAKE_FEDORA_LIBEXEC_DIR $PWD $PWD/scripts `dirname $0`;do
 	break
     fi
 done
-
-
-KOJI_CMD=`find_program koji`
 LOCAL_CACHE_FILE="${LOCAL_CACHE_DIR:=$HOME/.cache/cmake-fedora/}koji"
 
-if [ -z "$KOJI_CMD" ];then
+KOJI_CMD=`find_program koji`
+if [ -z "${KOJI_CMD}" ];then
     echo "koji is not found in path" > /dev/stderr
     exit -1
 fi
 
-
 if [ $# = 0 ]; then
    print_usage
+   exit 0
 fi
 
 subCmd=$1
 shift
 
-if [ "$subCmd" = "clean" ];then
-    rm -f $LOCAL_CACHE_FILE
-    echo "Cache file $LOCAL_CACHE_FILE removed"
+if [ "${subCmd}" = "clean" ];then
+    if [ -e "${LOCAL_CACHE_DIR}" ]; then
+	rm -fv ${LOCAL_CACHE_DIR}/*
+    fi
     exit 0
+elif [ "${subCmd}" = "newest-build" ];then
+    pkg=$1
+    shift
+    _content=`get_koji_pkg_history "${pkg}"`
+    if [ "$?" = "0" ] ; then
+	echo "${_content}" | tail -n 1 | sed -e "s/ tagged into.*$//" | sed -e "s/^.*(eid [0-9]*) //"
+	exit 0
+    else
+	echo "Cannot found package ${pkg}" > /dev/stderr
+	exit 1
+    fi
 fi
 
 rawhide=0
@@ -281,7 +290,6 @@ case $subCmd in
 	    cat $EPEL_TMP_FILE
 	fi
 	;;
-
     target )
 	if [[ $rawhide -eq 1 ]];then
 	    echo "$RAWHIDE_BRANCH-candidate"
